--- a/html/detail.html
+++ b/html/detail.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/d19fdaba43.js"></script>
-<link rel="stylesheet" href="detail.css">
+<link rel="stylesheet" href="../css/detail.css">
 <head>
     <meta charset="UTF-8">
     <title>상세페이지</title>
 </head>
 <!--헤더 부분-->
 <header>
-    <div id="e-book-header-div">
-        <button>로고</button>
+    <div id="e-book-category-div">
+<!--        <button>로고</button>-->
         <button>웹툰</button>
         <button>소설</button>
     </div>
@@ -31,7 +31,7 @@
         </div>
         <div id="book-detail-tc">
             <div id="detail-title">제목</div>
-            <div id="detail-content">책 상세 설명</div>
+            <div id="detail-content">책 상세 설명<i class="fa-regular fa-heart"></i></div>
             <!--            <div id="book-part"></div>-->
         </div>
     </div>
@@ -40,18 +40,46 @@
 
 <section id="part-section">
     <div id="part-selection">
-        <div class="part"><button class="select-part" type="button">파트1</button></div>
-        <div class="part"><button class="select-part" type="button">파트2</button></div>
-        <div class="part"><button class="select-part" type="button">파트3</button></div>
-        <div class="part"><button class="select-part" type="button">파트4</button></div>
-        <div class="part"><button class="select-part" type="button">파트5</button></div>
-        <div class="part"><button class="select-part" type="button">파트6</button></div>
-        <div class="part"><button class="select-part" type="button">파트7</button></div>
+        <div class="part">파트1
+            <p>200p</p>
+            <button class="purchase">구매</button>
+            <button class="cart">담기</button>
+        </div>
+        <div class="part">파트1
+            <p>200p</p>
+            <button class="purchase">구매</button>
+            <button class="cart">담기</button>
+        </div>
+        <div class="part">파트2
+            <p>200p</p>
+            <button class="purchase">구매</button>
+            <button class="cart">담기</button>
+        </div>
+        <div class="part">파트3
+            <p>200p</p>
+            <button class="purchase">구매</button>
+            <button class="cart">담기</button>
+        </div>
+        <div class="part">파트4
+            <p>200p</p>
+            <button class="purchase">구매</button>
+            <button class="cart">담기</button>
+        </div>
+        <div class="part">파트5
+            <p>200p</p>
+            <button class="purchase">구매</button>
+            <button class="cart">담기</button>
+        </div>
     </div>
-
-    <div id="comment">댓글부분</div>
-
 </section>
+
+
+<!--<section id="comment-section">-->
+<!--    <div id="comment-div">-->
+
+<!--    </div>-->
+<!--</section>-->
+
 
 </body>
 </html>
