--- a/html/find.html
+++ b/html/find.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="find.css">
+    <link rel="stylesheet" href="../css/find.css">
     <title>아이디/비밀번호 찾기</title>
 </head>
 <body>
