--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인 페이지</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -14,11 +14,11 @@
         <h1>환영합니다! 로그인을 해주세요</h1>
             <div id="login-div">
             <label>
-                <input type="text">
+            <input type="text">
             </label>
             <br>
             <label>
-                <input type="password"><i class="bi bi-eye-fill"></i>
+            <input type="password"><i class="bi bi-eye-fill"></i>
             </label>
             </div>
         </form>
