--- a/html/find.html
+++ b/html/find.html
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      layout:decorate="~{public/layout}"
+>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/find.css">
-    <title>아이디/비밀번호 찾기</title>
+    <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
+    <title>FIND ID/PW | KOREAIT</title>
+    <link rel="stylesheet" href="../css/find.css" th:href="@{/css/find.css}">
+    <script src="../js/find.js" th:src="@{/js/find.js}" defer></script>
 </head>
 <body>
-    <form action="">
-        <div>
-            <span>아이디 찾기</span>
-            <label>
-                이름
-                <input type="text">
-            </label>
-            <label>
-                이메일  |  휴대폰 번호
-                <input type="text">
-            </label>
-            <button>찾기</button>
+<main layout:fragment="main">
+    <section>
+        <span>아이디 찾기</span>
+        <div class="find-div">
+            <span class="find-title">이메일로 찾기</span>
+            <label><input type="text" id="find-id-email" placeholder="이메일작성"></label>
+            <button type="button" id="find-id-btn">아이디 찾기</button>
         </div>
+    </section>
 
-        <div>
-            <span>비밀번호 찾기</span>
-            <label>
-                아이디
-                <input type="text">
-            </label>
-            <label>
-                이름
-                <input type="text">
-            </label>
-            <label>
-                이메일  |  휴대폰 번호
-                <input type="text">
-            </label>
-            <button>찾기</button>
-
+    <section>
+        <span>비밀번호 재설정</span>
+        <div class="find-div">
+            <span class="find-title">이메일로 재설정</span>
+            <label><input type="text" id="find-pw-id" placeholder="아이디입력"></label>
+            <label><input type="email" id="find-pw-email" placeholder="이메일입력"></label>
+            <button type="button" id="find-pw-btn">이메일 전송하기</button>
         </div>
-    </form>
+    </section>
+</main>
 </body>
 </html>
