--- a/html/viwerpage.html
+++ b/html/viwerpage.html
@@ -5,32 +5,28 @@
     <title>뷰어</title>
 </head>
 <body>
-    <main>
-        <form>
-            <div>
-                <button>
-                    다음화
-                </button>
-                <button>
-                    이전화
-                </button>
+    <main id="main-side-section">
+        <form id="form-section">
+            <div id="next-chapter-section">
+                <button>다음화</button>
+                <button>이전화</button>
             </div>
-            <div>
+            <div id="icon-section">
                 <i>홈 아이콘</i>
                 <i>댓글 아이콘</i>
             </div>
         </form>
 
-        <div>
+        <div id="left-arrow-section">
             <button>
                 왼쪽 화살표
             </button>
         </div>
 
-        <section>
+        <section id="viewer-section">
             뷰어 섹션
         </section>
-        <div>
+        <div id="rifgt-arrow-section">
             <button>
                 오른쪽 화살표
             </button>
@@ -39,17 +35,17 @@
 
         <form>
             <div>
-                    <button>
+                <button>
                         다음화
-                    </button>
-                    <button>
+                </button>
+                <button>
                         이전화
-                    </button>
-                </div>
+                </button>
+            </div>
             <div>
-                    <i>홈 아이콘</i>
-                    <i>댓글 아이콘</i>
-                </div>
+                <i>홈 아이콘</i>
+                <i>댓글 아이콘</i>
+            </div>
         </form>
 
     </main>
