--- a/html/detail.html
+++ b/html/detail.html
@@ -79,30 +79,14 @@
 <section id="comment-section">
     <div id="comment-div">
         <div class="comment">
-            <div class="comment-author">@user-0275</div>
-<<<<<<< Updated upstream
-            <div class="comment-text">역시 저자 가기 쉽네요는 이 책만한데요.</div>
-            <div class="comment-like"><i class="fas fa-heart"></i></div>
-        </div>
-        <div class="comment">
-            <div class="comment-author">@user-0275</div>
-            <div class="comment-text">역시 저자 가기 쉽네요는 이 책만한데요.</div>
-            <div class="comment-like"><i class="fas fa-heart"></i></div>
-        </div>
-        <div class="comment">
-            <div class="comment-author">@user-0275</div>
-            <div class="comment-text">역시 저자 가기 쉽네요는 이 책만한데요.</div>
-            <div class="comment-like"><i class="fas fa-heart"></i></div>
-=======
-            <div id="user-commenet-div">
             <div class="user-profile"><img src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj" alt="#"></div>
-            <input type="text" class="comment-input" placeholder="댓글을 입력해주세요!"
+            <div id="user-comment-div">
+                <div class="comment-author">@user-0275</div>
+                <input type="text" class="comment-input" placeholder="댓글을 입력해주세요!">
+                <div class="comment-like"><i class="fa-regular fa-heart"></i></div>
             </div>
-            <div class="comment-like"><i class="fa-regular fa-heart"></i></div>
->>>>>>> Stashed changes
         </div>
     </div>
 </section>
-
 </body>
 </html>
