--- a/html/mypage.html
+++ b/html/mypage.html
@@ -18,7 +18,7 @@
                     <div>생일</div>
                     <div>닉네임</div>
                     <div>이메일</div>
-                </span>
+            </span>
         </div>
     </section>
 
@@ -53,7 +53,7 @@
     </section>
     <section>
         <div>
-            댓글 좋아요 목록.  4개 목록 다 createnode js 넣어야 할 듯?
+            댓글 좋아요 목록.  4개 목록 다 createnode js
         </div>
     </section>
 </main>
