--- a/html/viwerpage.html
+++ b/html/viwerpage.html
@@ -3,50 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>뷰어</title>
+    <link rel="stylesheet" href="../css/viwerpage.css">
 </head>
 <body>
     <main id="main-side-section">
-        <form id="form-section">
-            <div id="next-chapter-section">
-                <button>다음화</button>
-                <button>이전화</button>
-            </div>
+        <div id="top-container">
+            <form id="form-section">
+                <div>
+                    제목
+                </div>
+                <div class="next-chapter-class">
+                    <button>다음화</button>
+                    <button>이전화</button>
+                </div>
+            </form>
             <div id="icon-section">
                 <i>홈 아이콘</i>
                 <i>댓글 아이콘</i>
             </div>
-        </form>
-
-        <div id="left-arrow-section">
-            <button>
-                왼쪽 화살표
-            </button>
         </div>
 
-        <section id="viewer-section">
-            뷰어 섹션
-        </section>
-        <div id="rifgt-arrow-section">
-            <button>
-                오른쪽 화살표
-            </button>
-        </div>
-
-
-        <form>
-            <div>
+        <div>
+            <div id="left-arrow-section">
                 <button>
-                        다음화
-                </button>
-                <button>
-                        이전화
+                    왼쪽 화살표
                 </button>
             </div>
+            <section id="viewer-section">
+                뷰어 섹션
+            </section>
+            <div id="right-arrow-section">
+                <button>
+                    오른쪽 화살표
+                </button>
+            </div>
+
+        </div>
+
+
+
+        <div>
+            <form class="next-chapter-class">
+                <div>
+                    <button>
+                        다음화
+                    </button>
+                    <button>
+                        이전화
+                    </button>
+                </div>
+            </form>
             <div>
                 <i>홈 아이콘</i>
                 <i>댓글 아이콘</i>
             </div>
-        </form>
+        </div>
+
 
     </main>
 </body>
