--- a/html/viewerpage.html
+++ b/html/viewerpage.html
@@ -13,7 +13,7 @@
             <div id="top-container">
                 <div class="top-interaction-class">
                     <section>
-                        <button>다음 화</button>
+                        <button class="page-button">다음 화</button>
                     </section>
 
                     <section class="title-section">
@@ -31,18 +31,18 @@
                                 <option>3</option>
                             </select>
                         </label>
-                        <button>이전 화</button>
+                        <button class="page-button">이전 화</button>
                     </section>
                 </div>
             </div>
 
             <div id="view-side-container">
                 <div id="left-arrow-section">
-                    <button>왼쪽 화살표</button>
+                    <i class="fa-solid fa-arrow-left"></i>
                 </div>
                 <section id="viewer-section">뷰어 섹션</section>
                 <div id="right-arrow-section">
-                    <button>오른쪽 화살표</button>
+                    <i class="fa-solid fa-arrow-right"></i>
                 </div>
 
             </div>
