--- a/html/detail.html
+++ b/html/detail.html
@@ -29,11 +29,21 @@
 <section id="book-detail-section">
     <div id="book-detail-div">
         <div id="book-detail-img-div">
-            <div id="detail-img">이미지</div>
+            <div id="detail-img">
+                <img src="" alt="이미지">
+                <!-- 책 이미지를 여기에 넣으시면 됩니다 -->
+            </div>
         </div>
         <div id="book-detail-info-div">
-            <div id="detail-title">제목</div>
-            <div id="detail-content">책 상세 설명<i class="fa-regular fa-heart"></i></div>
+            <div id="detail-title">이것이 자바다 (교육현장에서 가장 많이 쓰인 JAVA 프로그래밍 기본서)</div>
+            <div id="detail-content">
+                <p>저자 신용권, 임경균</p>
+                <div id="save-btn-div">
+                <button id="save"><i class="fa-regular fa-heart"></i></button>
+                </div>
+                <p>출판 한빛미디어 2024.04.01</p>
+                <p>최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</p>
+            </div>
         </div>
     </div>
 </section>
@@ -54,17 +64,20 @@
 </section>
 
 <!--댓글 부분-->
-<!--댓글 부분-->
 <section id="comment-section">
     <div id="comment-div">
         <div class="comment">
-            <div class="user-profile"><img alt="#" src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj">
-            </div>
+            <div class="user-profile"><img alt="#" src="https://yt3.ggpht.com/a/default-user=s48-c-k-c0x00ffffff-no-rj"></div>
             <div class="user-comment-div">
                 <div class="comment-author">@user-0275</div>
+                <div class="comment-like-btn-div">
+                    <button class="comment-like"><i class="fa-regular fa-heart"></i></button>
+                </div>
                 <div class="comment-container">
                     <input class="comment-input" placeholder="댓글을 입력해주세요!" type="text">
-                    <div class="comment-like"><i class="fa-regular fa-heart"></i></div>
+                </div>
+                <div class="comment-regist-div">
+                    <button id="comment-btn">댓글 달기</button>
                 </div>
             </div>
         </div>
