--- a/html/viewerpage.html
+++ b/html/viewerpage.html
@@ -37,13 +37,13 @@
             </div>
 
             <div id="view-side-container">
-                <div id="left-arrow-section">
+                <button id="left-arrow-section">
                     <i class="fa-solid fa-arrow-left"></i>
-                </div>
+                </button>
                 <section id="viewer-section">뷰어 섹션</section>
-                <div id="right-arrow-section">
+                <button id="right-arrow-section">
                     <i class="fa-solid fa-arrow-right"></i>
-                </div>
+                </button>
 
             </div>
         </div>
