--- a/html/pub/header.html
+++ b/html/pub/header.html
@@ -46,7 +46,25 @@
 
             </section>
         </form>
-        <button id="user"><i class="fa-solid fa-user"></i></button>
+        <section id="my-page-section">
+            <div id="my-page-section-div">
+                <button id="user"><i class="fa-solid fa-user"></i></button>
+            </div>
+            <section id="my-page-section-section">
+                <div class="my-page-div">
+                    <h4>내 정보</h4>
+                </div>
+                <h4 class="my-cash">현재 보유 캐시</h4>
+                <div class="my-page-point">
+                    <h4>100P</h4>
+                    <button>충전</button>
+                </div>
+                <div class="logout-div">
+                    <button class="logout-btn">로그아웃</button>
+                </div>
+            </section>
+
+        </section>
     </div>
 </header>
 </body>
